[package]
name = "lobby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "lobby"

[dependencies]
serde = "1"
derive_more = "0"

hdk = {version="0.0.138", features = ["encoding"]}
hc_zome_lobby_admin = {path = "../admin"}
hc_zome_lobby_entries = {path = "../entries"}
hc_zome_lobby_members = {path = "../members"}